Wrap large nav list items in links and fix border style

--- a/themes/bootstrap/css/layout.css
+++ b/themes/bootstrap/css/layout.css
@@ -11,7 +11,8 @@
 .large-nav > .pic-link {
     float:left;
     padding:30px 50px;
-    border-left:1px solid;
+    border-left-width:1px;
+    border-left-style:solid;
     cursor:pointer;
 }
 
